# fizikl-assignment-2025

./: .env.example  .gitignore  Makefile  README.md  docker-compose.local.yml  docker-compose.yml
src/: Dockerfile  Makefile  formatters-cfg.toml  manage.py  pyproject.toml  pytest.ini
src/fizikl_assignment/: __init__.py  asgi.py  celery.py  loggers.py  settings.py  urls.py  wsgi.py
src/tasks/: admin.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
src/tasks/migrations/: 0001_initial.py  0002_initial.py
src/tests/: base.py  conftest.py  factories.py
src/tests/tasks/: test_task_detail.py  test_task_list_create.py
src/tests/users/: test_auth.py
src/users/: admin.py  backends.py  forms.py  managers.py  models.py  serializers.py  urls.py  views.py
src/users/migrations/: 0001_initial.py
src/utils/: admin.py  dt.py  models.py
